# vbystricky_tests

card_games/src/: CMakeLists.txt  cards_common.hpp  cards_renderer.hpp  durak_game.hpp  durak_game_decision_base.hpp  durak_game_decision_less_card.hpp  durak_game_statistic.hpp  main.cpp
mnist_tests/: MNIST_test.py
multi_arms_bandits/: Readme.md
multi_arms_bandits/src/: CMakeLists.txt  main.cpp
